--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="tv_passNr">Passport nr.</string>
     <string name="tv_nrVac">Nr of vacciens</string>
     <string name="button_minus">-</string>
+    <string name="loginButton">Login</string>
+    <string name="errorMessageDefault">Error Message Field</string>
+    <string name="passportNumberHint">Passport Number</string>
+    <string name="passwordHint">Password</string>
+    <string name="loginTitle">Login</string>
+    <string name="noAccountInformation">Don\'t have an account?</string>
+    <string name="singUpLink">Sing up</string>
 </resources>
