VP-011-B Implemented language change [MF, ZMartin]

--- a/App/app/src/main/res/values-ru/strings.xml
+++ b/App/app/src/main/res/values-ru/strings.xml
@@ -6,4 +6,5 @@
     <string name="tv_passNr">Паспорт №</string>
     <string name="tv_nrVac">Kol-vo vaktsin</string>
     <string name="button_minus">-</string>
+    <string name="language_key">at.tugraz.vaccinationpassport.langauge</string>
 </resources>
