--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="tv_passNr">Passport nr.</string>
     <string name="tv_nrVac">Nr of vacciens</string>
     <string name="button_minus">-</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
 </resources>
