VP-011-C fix action bar bug, fixed sign up link typo, added test for language button [MF, ZMartin, GN]

--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -16,5 +16,5 @@
     <string name="passwordHint">Password</string>
     <string name="loginTitle">Login</string>
     <string name="noAccountInformation">Don\'t have an account?</string>
-    <string name="singUpLink">Sing up</string>
+    <string name="singUpLink">Sign up</string>
 </resources>
