VP-011-C Fixed tests [MF, ZMartin]

--- a/App/app/src/main/res/values-ru/strings.xml
+++ b/App/app/src/main/res/values-ru/strings.xml
@@ -18,4 +18,6 @@
     <string name="loginTitle">Авторизоваться</string>
     <string name="noAccountInformation">Нет учетной записи?</string>
     <string name="singUpLink">Зарегистрируйтесь</string>
+    <string name="disease">Болезнь</string>
+    <string name="date">Дата</string>
 </resources>
