--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="singUpLink">Sign up</string>
     <string name="disease">Disease</string>
     <string name="date">Date</string>
+    <string name="invalid_login_details">Invalid Passport Number / Password</string>
+    <string name="could_not_connect_to_server">Could not connect to the server</string>
+    <string name="registering_not_implemented">Registering is not Implemented</string>
 </resources>
